Improve TLAPS integration in the Toolbox - #345
- Reorganizing the TLAPS preferences sub-tree and adding a preference to allow setting the file path of the user's tlapm executable.
- The TLAPM existence checker will now walk the Toolbox's path looking in each cited directory for a tlapm executable should one not be defined through the preferences.
- RCPTT test for the functionality addition (checking for menus disabled when it can't be found, setting it via preferences, checking for enabled menus.)

#345
[Feature][Toolbox]